tilt/istio/gateways.yaml
# https://istio.io/latest/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-internal
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: istio-internal
  servers:
  - hosts:
    - '*.nip.io'
    - '*.127.0.0.1.nip.io'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: false
